Fixed header alignment

--- a/theme/mkdocs/css/base.css
+++ b/theme/mkdocs/css/base.css
@@ -147,19 +147,29 @@ div.source-links {
 }
 
 #ninefold-nav .container{
-    padding: 0px 15px;
+    padding: 0px 15px !important;
 }
 
 .ninefold-nav .navbar-nav a{
     font-family: omnes-pro;
     color:#aaacaf !important;
-    padding-left: 8px !important;
-    padding-right: 8px !important;
+    padding-left: 8px ;
+    padding-right: 8px ;
     padding-top: 5px !important;
     padding-bottom: 5px !important;
     font-weight: 500;
     text-transform: uppercase;
     font-size: 14px !important;
+
+    
+
+
+}
+@media(max-width: 991px){
+    .ninefold-nav .navbar-nav a{
+        padding-left: 6px !important;
+        padding-right: 6px !important;
+    }        
 }
 .ninefold-nav .navbar-nav li.active a{
     color: #45B5E1 !important;
@@ -213,7 +223,7 @@ div.source-links {
     padding-right: 15px;
 }
 .navbar{
-    padding-top: 30px;
+    padding-top: 29px;
     padding-bottom: 30px;
     border-radius: 0px;
     margin-bottom: 0px;
